--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -4,7 +4,7 @@
 <p>{{ nome }} tem mais de 28 anos?</p>
 <p>{{ idade > 28 }}</p>
 
-<p>Quanto é {{ idade }} + 1?</p>
-<p>{{ idade + 1 }}</p>
+<p>Quanto é {{ idade }} + {{maisUm}}?</p>
+<p>{{ idade + maisUm }}</p>
 
 
