--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -7,4 +7,10 @@
 <p>Quanto é {{ idade }} + {{maisUm}}?</p>
 <p>{{ idade + maisUm }}</p>
 
+<hr>
 
+<h2>Property Binding</h2>
+
+<button [disabled]="checkedDisabled">Button</button>
+
+<img [src]="imgSrc">
