19. Property Binding pt. 02

--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -13,4 +13,4 @@
 
 <button [disabled]="checkedDisabled">Button</button>
 
-<img [src]="imgSrc">
+<img [src]="imgSrc" [title]="imgTitle" [alt]="imgTitle">
