--- a/src/app/diretivas-estruturais/diretivas-estruturais.component.html
+++ b/src/app/diretivas-estruturais/diretivas-estruturais.component.html
@@ -7,3 +7,14 @@
 </ng-template>
 
 <hr>
+
+<p *ngIf="conditionClick">
+    True
+</p>
+
+<p  *ngIf="!conditionClick">
+    False
+</p>
+
+
+<button (click)="onClick()">Clicar</button> 
