--- a/src/app/diretivas-estruturais/diretivas-estruturais.component.html
+++ b/src/app/diretivas-estruturais/diretivas-estruturais.component.html
@@ -18,6 +18,8 @@
 <button (click)="onClick()">Clicar</button> 
 
 <ul>
-    <li *ngFor="let item of list">{{ item.nome }} - idade = {{ item.idade }}</li>
+    <li *ngFor="let item of list; let i = index;" (click)="onClickEventList(i)">
+        [{{i+1}}] - {{ item.nome }} - idade = {{ item.idade }}
+    </li>
 </ul>
 <button (click)="onClickAddList()">Add</button> 
