--- a/src/app/diretivas-atributos/diretivas-atributos.component.html
+++ b/src/app/diretivas-atributos/diretivas-atributos.component.html
@@ -22,3 +22,9 @@
 <button (click)="salvar()">Salvar</button>
 
 <ng-content select="h3"></ng-content>
+
+<!-- <input [(ngModel)]="nome"> 
+<button (click)="salvar()">Salvar</button>
+<li *ngFor="let item of list">{{ item.nome | uppercase }}</li> -->
+
+{{ date | date: 'dd/MM/yyyy' }}
